--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           alt="Laptop"
         />
         <h2>Laptops</h2>
-        <p>Powerful laptops for work and fun.</p>
+        <p>Powerful laptops for work and fun..</p>
       </div>
 
       <div class="card">
